--- a/assets/css/dropDown.css
+++ b/assets/css/dropDown.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: sans-serif;
-    src: url(/assets/css/dropDown.css);
+/*     font-family: sans-serif;
+    src: url(/assets/css/dropDown.css); */
 }
 
 * {
